# monodevelop-prehistoric

MonoDevelop/: AUTHORS  ChangeLog  FAQS  FIND_PROBLEMS  KNOWN_ISSUES  Makefile  Makefile.am  Makefile.include  MonoDevelop.mds  MonoDevelopBrokenMenuItems.txt  README  RELEASE_REQUIREMENTS  TODO  autogen.sh  broad_developer_roadmap  configure.in  monodevelop  monodevelop.applications  monodevelop.desktop  monodevelop.in  monodevelop.keys  monodevelop.mime  monodevelop.xml
MonoDevelop/Core/: ChangeLog  Makefile.am  README  configure.in  monodevelop.applications  monodevelop.in  monodevelop.xml
MonoDevelop/Core/data/resources/: AddIn.xsd  Makefile.am
MonoDevelop/Core/docs/: MDWithIkvm.txt
MonoDevelop/Core/gdldock/: Makefile.am
MonoDevelop/Core/gdldock/gdl/: ChangeLog  DockLayout.custom  Makefile.am  gdl-api.raw  gdl-sharp.dll.config.in
MonoDevelop/Core/gdldock/sources/: Makefile.am
MonoDevelop/Core/gdldock/test/: Makefile
MonoDevelop/Core/po/: ChangeLog  POTFILES.in  da.po  es.po  fr.po  ja_JP.po
MonoDevelop/Core/src/: Makefile.am  Makefile.solution.MonoDevelop  make.sh
MonoDevelop/Core/src/AddIns/: Makefile.am
MonoDevelop/Core/src/ICSharpCode.SharpAssembly/: ICSharpCode.SharpAssembly.mdp  Makefile.am
MonoDevelop/Core/src/ICSharpCode.SharpRefactory/: ChangeLog  ICSharpCode.SharpRefactory.mdp  Makefile.am  SharpRefactory.prjx  TODO  a.cs
MonoDevelop/Core/src/MonoDevelop.Base/: Base.glade  ChangeLog  Makefile.am  MonoDevelop.Base.dll.config.in  MonoDevelop.Base.mdp  MonoDevelop.Base.prjx  MonoDevelopCore.addin.xml
MonoDevelop/Core/src/MonoDevelop.Core/: AddIn.xsd  ChangeLog  Makefile.am  MonoDevelop.Core.mdp
MonoDevelop/Core/src/MonoDevelop.Dock/: AfterAttribute.cs  ChangeLog  Dock.cs  DockBar.cs  DockBarButton.cs  DockItem.cs  DockItemGrip.cs  DockLayout.cs  DockMaster.cs  DockNotebook.cs  DockObject.cs  DockObjectFlags.cs  DockPaned.cs  DockPlaceholder.cs  DockTest.mdp  Makefile  Makefile.am  MonoDevelop.Dock.mdp  MonoDevelop.Dock.mds  Stock.cs  TODO
MonoDevelop/Core/src/MonoDevelop.Gui.Utils/: ChangeLog  Makefile.am  MonoDevelop.Gui.Utils.mdp
MonoDevelop/Core/src/MonoDevelop.Gui.Widgets/: ChangeLog  Makefile.am  MonoDevelop.Gui.Widgets.mdp  MonoDevelop.Gui.Widgets.prjx
MonoDevelop/Core/src/MonoDevelop.SharpAssembly/: Makefile.am
MonoDevelop/Core/src/MonoDevelop.Startup/: ChangeLog  Makefile.am  MonoDevelop.Startup.glade  MonoDevelop.Startup.mdp  MonoDevelopMain.cs
MonoDevelop/Extras/: Makefile.am
MonoDevelop/Extras/BooBinding/: BooAmbience.boo  BooBinding.addin.xml  BooBinding.mdp  BooBindingCompilerServices.boo  BooLanguageBinding.boo  BooShellPadContent.boo  ChangeLog  Makefile.am
MonoDevelop/Extras/BooBinding/BooShell/: BooShell.boo  BooShell.mdp
MonoDevelop/Extras/DebuggerAddIn/: Makefile.am  autogen.sh  configure.in
MonoDevelop/Extras/JavaBinding/: ChangeLog  JavaBinding.addin.xml  JavaBindingCompilerServices.cs  JavaLanguageBinding.cs  Makefile.am
MonoDevelop/Extras/MonoDeveloperExtensions/: ChangeLog  Commands.cs  Makefile.am  MonoDeveloperExtensions.addin.xml  MonoDeveloperExtensions.mdp  MonoMakefileFormat.cs  MonoProject.cs
MonoDevelop/Extras/MonoQuery/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Data.Sql.mds  MonoQuery.addin.xml  MonoQuery.addin.xml.in  MonoQuery.cmbx  MonoQuery.mdsx  MonoQuery.prjx  MonoQueryView.cs
MonoDevelop/Extras/NUnit/: ChangeLog  FixtureAddedEventHandler.cs  FixtureLoadedErrorEventHandler.cs  Makefile  Makefile.am  MonoDevelop.NUnit.mdp  MonoDevelopNUnit.addin.xml  TODO
MonoDevelop/Extras/PythonBinding/: Makefile  PythonBinding.addin.xml  PythonLanguageBinding.cs
MonoDevelop/Extras/VersionControl/: ChangeLog  VersionControl.mds
MonoDevelop/MonoDevelop/: AUTHORS  ChangeLog
MonoDevelop/MonoDevelop/po/: da.po
MonoDevelop/Unused/AddInManager/: Makefile.am
MonoDevelop/Unused/Gdl/: ChangeLog  DetachedHandler.cs  Dock.cs  DockBar.cs  DockBarButton.cs  DockItem.cs  DockItemGrip.cs  DockLayout.cs  DockMaster.cs  DockNotebook.cs  DockObject.cs  DockPaned.cs  DockParamFlags.cs  DockPlaceholder.cs  ExportAttribute.cs  ExportLayoutAttribute.cs  Gdl.cmbx  GdlDockTest.cs  Makefile  Makefile.Gdl  Stock.cs  TODO
MonoDevelop/Unused/ICSharpCode.TextEditor/: Makefile.am
MonoDevelop/Unused/Nunit/: Makefile  MonoDevelopNunit.addin.xml  TODO
MonoDevelop/Unused/TextEditor/: Makefile.am
MonoDevelop/contrib/: Makefile.am
MonoDevelop/data/: Makefile.am
MonoDevelop/data/resources/: AddIn.xsd  Makefile.am  StringResources.resources
MonoDevelop/docs/: MDWithIkvm.txt  SourceMap.html  Translations.html  WritingAddIns.html
MonoDevelop/gdldock/: Makefile  Makefile.am
MonoDevelop/gdldock/gdl/: ChangeLog  DockItemFlags.cs  DockLayout.custom  DockObject.custom  Gdl.metadata  Makefile  Makefile.am  gdl-api.xml
MonoDevelop/gdldock/sources/: Makefile  Makefile.am  gdl-sharp-sources.xml
MonoDevelop/gdldock/test/: GdlDockTest.cs  Makefile
MonoDevelop/gtkmozembed-sharp/: ChangeLog  EmbedWidget.custom  Makefile  Makefile.am  README  configure.in  gtkmozembed-api.raw
MonoDevelop/gtkmozembed-sharp/gtkmozembed/: GtkMozEmbed.metadata  Makefile.am  NewWindowOrphan_handler.cs  NewWindow_delegate.cs  NewWindow_handler.cs  Single.custom
MonoDevelop/help/: monodevelop.omf  monodevelop.xml
MonoDevelop/images/: README
MonoDevelop/libmonodevelop/: ChangeLog  Makefile.am  gettext-utils.c  gettext-utils.h  lmd-key-propagate.c
MonoDevelop/po/: ChangeLog  POTFILES.in  POTFILES.skip  README  da.po  da_DK.po  en_CA.po  es.po  fr.po  ja_JP.po  pt_BR.po
MonoDevelop/samples/HtmlControl/: Makefile  TODO  Test.cs
MonoDevelop/samples/MonoPad/: Main.cs  Makefile
MonoDevelop/samples/VFS/: Makefile  test.cs
MonoDevelop/src/: Makefile.am  Makefile.solution.MonoDevelop  MonoDevelop.cmbx
MonoDevelop/src/AddIns/: Makefile.am
MonoDevelop/src/Libraries/: Makefile.am
MonoDevelop/src/Main/: Makefile.am
MonoDevelop/src/Tools/: Makefile.am
MonoDevelop/web/: commands  makefile  process.pl
MonoDevelop/web/src/: bugs.src  download.src  index.src  screenshots.src  ssvn.src  svn.src
(+3234 files in other folders)
